	modeled fragment size is turned off by default. Previously, if the
	d from MACS is smaller than 2 times of read length, MACS will use
	2 times of --shiftsize setting instead. This may lead to unwanted
	result, especially when sequencing read length gets longer. It has
	been turned off by default now, if you still want this feature,
	please use '--off-auto' and '--shiftsize' with desired number.

2011-06-21  Tao Liu  <taoliu@jimmy.harvard.edu>
	Version 1.4.1

	* PeakDetect.py

	Fix a bug, correctly assign lambda_bg while --to-small is
	set. Thanks Junya Seo!

	Fix a bug to allow minus strand containing NO tags at all. Thank
	Vaibhav Jain for bringing up this problem!

	Correctly use user-specified tag size while -s/--tsize is
	set. Thank Shunmin He for the bug report!

2011-06-19  Tao Liu  <taoliu@jimmy.harvard.edu>
	Version 1.4.0

	* Parser.py

	Change all split() to split('\t'), so that MACS now split columns
	in input reads alignment file only using tab.

	* elandexport2bed.py, elandmulti2bed.py, elandresult2bed.py, sam2bed.py

	.py are all removed, so the commands are elandexport2bed,
	elandmulti2bed, elandresult2bed and sam2bed.

2011-02-28  Tao Liu  <taoliu@jimmy.harvard.edu>
	Small fixes

	* Replaced with a newest WigTrackI class and fixed the wignorm script.

2011-02-21  Tao Liu  <taoliu@jimmy.harvard.edu>
	Version 1.4.0rc2 (Valentine)

	* --single-wig option is renamed to --single-profile

	* BedGraph output with --bdg or -B option.

	The BedGraph output provides 1bp resolution fragment pileup
	profile. File size is smaller than wig file. This option can be
	combined with --single-profile option to produce a bedgraph file
	for the whole genome. This option can also make --space,
	--call-subpeaks invalid.

	* Fix the description of --shiftsize to correctly state that the
	value is 1/2 d (fragment size).

	* Fix a bug in the call to __filter_w_control_tags when control is
	not available.

	* Fix a bug on --to-small option. Now it works as expected.
